# circkit

./: .gitignore  Cargo.toml  README.md  hyperfine.sh  test.fasta
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/proptest-regressions/: orfs.txt
lib/src/: canonicalize.rs  lib.rs  monomerize.rs  monomerize2.rs  normalize.rs  orfs.rs
src/: canonicalize.rs  commands.rs  concatenate.rs  lib.rs  main.rs  monomerize.rs  monomerize2.rs  normalize.rs  normalize2.rs  orfs.rs  rotate.rs  uniq.rs  utils.rs
tests/: canon_uniq.rs  cat_decat.rs  common.rs  compression.rs  monomerize.rs  orfs.rs  rotate.rs  tests.rs
tests/examples/both_orfs_cated_Soil_microbial_communities_from_permafrost_in_Bonanza_Creek__Alaska/: generate.sh
tests/examples/cat/: out.fasta
tests/examples/compressed_input/: in.fasta  in.fasta.bz2  in.fasta.xz  in.fasta.zst
tests/examples/decat/: in.fasta  out.fasta
tests/examples/min_overlap/: in.fasta  out.fasta
tests/examples/min_overlap_percent_0.51/: in.fasta  out.fasta
tests/examples/min_overlap_percent_1.0/: out.fasta
tests/examples/min_overlap_percent_1.5/: in.fasta  out.fasta
tests/examples/multiple_sequences/: in.fasta  out.fasta
tests/examples/multiple_sequences_split_lines/: in.fasta
tests/examples/nim_cated_Soil_microbial_communities_from_permafrost_in_Bonanza_Creek__Alaska/: README.md  out.fasta
tests/examples/orfs_cated_Soil_microbial_communities_from_permafrost_in_Bonanza_Creek__Alaska/: generate.sh
tests/examples/repeated/: in.fasta  out.fasta
tests/examples/rna_input/: in.fasta  out.fasta
tests/examples/rotate_0.25/: out.fasta
tests/examples/rotate_0.5/: in.fasta  out.fasta
tests/examples/rotate_5/: in.fasta  out.fasta
tests/examples/rotate_minus_5/: out.fasta
tests/examples/simple/: in.fasta
