[package]
name = "circkit"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin D. Lee <benjamin.lee@chch.ox.ac.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bio = "*"
clap = { version = "3.2.15", features = ["derive"] }
env_logger = "0.9.0"
human-panic = "1.0.3"
log = "0.4.17"
