[package]
name = "circkit-cli"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin D. Lee <benjamin.lee@chch.ox.ac.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bio = "*"
clap = { version = "3.0", features = ["derive"] }
clap-verbosity-flag = "1"
env_logger = "0.10.0"
human-panic = "1.0.3"
log = "0.4.17"
circkit = { path = "lib" }
anyhow = "1.0"
needletail = "0.5.1"
seq_io = "0.3.1"
niffler = "2.5.0"
rustc-hash = "1.1.0"
num_cpus = "1.0"
aho-corasick = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0"
predicates = "3.0.3"
rstest = "0.15.0"

[workspace]

[[bin]]
name = "circkit"
path = "src/main.rs"