[package]
name = "circkit-cli"
version = "0.1.0"
authors = ["Benjamin D. Lee <benjamin.lee@chch.ox.ac.uk>"]
description = "A toolkit for working with circular sequences."
license = "MIT"
edition = "2021"
repository = "https://github.com/Benjamin-Lee/circkit"
keywords = ["bioinformatics", "bio", "genomics", "fasta"]
categories = ["science", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bio = "1.3.1"
clap = { version = "3.0", features = ["derive"] }
clap-verbosity-flag = "1"
env_logger = "0.10.0"
human-panic = "1.0.3"
log = "0.4.17"
circkit = { path = "lib" }
anyhow = "1.0"
needletail = "0.5.1"
seq_io = "0.3.2"
niffler = "2.5.0"
num_cpus = "1.0"
aho-corasick = "1.0.1"
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
nohash-hasher = "0.2.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }


[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0"
predicates = "3.0.3"
rstest = "0.15.0"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace]

[[bin]]
name = "circkit"
path = "src/main.rs"
