[package]
name = "circkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
log = "0.4.17"
derive_builder = "0.11.2"
memchr = "2.5.0"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.15.0"